# dll_sample

./: CMakeLists.txt  ReadMe.md  build_demos_msvc2.bat  run.bat
Dll_1Layer/main/: CMakeLists.txt  test.cpp  test_withoutLib.cpp
Dll_1Layer/math/: CMakeLists.txt
Dll_1Layer/math/include/: my_math.h
Dll_1Layer/math/src/: my_math.cpp
Dll_2Layer/main/: CMakeLists.txt  test.cpp
Dll_2Layer/tool/: CMakeLists.txt
Dll_2Layer/tool/include/: tool_API.h
Dll_2Layer/tool/src/: tool_API.cpp
Dll_class/main/: CMakeLists.txt  test.cpp
Dll_class/math_class/: CMakeLists.txt
Dll_class/math_class/include/: my_math_API.hpp  my_math_class.h
Dll_class/math_class/src/: my_math_class.cpp
Dll_class_c/main/: CMakeLists.txt  test.cpp  test_withoutLib.cpp
Dll_class_c/math_class/: CMakeLists.txt
Dll_class_c/math_class/include/: my_math_class_c.h
Dll_class_c/math_class/src/: my_math_class_c.cpp
common/: SVdef.h
